--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -50,6 +50,23 @@
   color: white;
 }
 
-/* .txt-position {
-  color: #00e676;
-} */
+.download-cv-container {
+  display: flex;
+  justify-content: flex-start;
+}
+
+@media only screen and (max-width: 425px) {
+  .download-cv-container {
+    justify-content: center;
+  }
+
+  .socials-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .about-container {
+    padding-top: 40px;
+    text-align: center;
+  }
+}
