--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -19,5 +19,6 @@
   // background-attachment: fixed;
   // background-position: center;
   // background-size: cover;
-  padding: 30px 0;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
